--- a/src/components/layout/Board/Board.css
+++ b/src/components/layout/Board/Board.css
@@ -21,5 +21,6 @@
 @media screen and (max-width: 40em) {
   .Board {
     grid-auto-rows: 75px;
+    gap: .35rem;
   }
 }
