--- a/src/components/layout/Card/Card.css
+++ b/src/components/layout/Card/Card.css
@@ -29,8 +29,8 @@
 .Card__Side--Back::before {
   content: "";
   position: absolute;
-  width: 90%;
-  height: 90%;
+  width: 92.5%;
+  height: 92.5%;
   background-color: #a03046;
 }
 
@@ -47,7 +47,7 @@
   content: "";
   position: absolute;
   z-index: -1;
-  width: 90%;
-  height: 90%;
+  width: 92.5%;
+  height: 92.5%;
   background-color: #8f6e1d;
 }
