--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -5,14 +5,22 @@
   justify-content: center;
   align-items: center;
   user-select: none;
+  font-size: 3rem;
 }
 
 .Header__Title {
-  font-size: 3rem;
   font-family: "Fredoka One", cursive;
+  font-size: inherit;
   letter-spacing: 5px;
   text-shadow: 4px 4px 4px #000;
   text-align: center;
   color: #cdcdcd;
   padding: 0 1rem;
+}
+
+@media screen and (max-width: 40em) {
+  .Header {
+    padding-top: 1rem;
+    font-size: 1.75rem;
+  }
 }
