--- a/src/components/layout/Main/Main.css
+++ b/src/components/layout/Main/Main.css
@@ -9,6 +9,6 @@
   .Main {
     flex-direction: column;
     gap: 2rem;
-    padding: 1rem;
+    padding: .5rem 1rem 1rem 1rem;
   }
 }
